# Qwen3-TTS-X

./: .gitignore  Qwen3-TTS-X.py  README.md  main.py  pyproject.toml  studio.html  test_uvicorn_engine.py
qwen3_tts_gguf/export/tokenizer_12hz/: modeling_qwen3_tts_tokenizer_v2.py
qwen3_tts_gguf/inference/: proxy.py  stream.py
static/: 免责声明.txt
