[project]
name = "qwen3-tts-x"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.135.3",
    "gguf==0.18.0",
    "numpy==2.4.4",
    "onnxruntime-gpu==1.24.4",
    "pydantic==2.12.5",
    "python-multipart==0.0.22",
    "scipy==1.17.1",
    "sounddevice==0.5.5",
    "soundfile==0.13.1",
    "tokenizers==0.22.0",
    "uvicorn[standard]==0.42.0",
]
